fix color contrast of links

--- a/assets/scss/variables/_variables.scss
+++ b/assets/scss/variables/_variables.scss
@@ -1,6 +1,6 @@
 //utilities
 $primary: rgb(2, 48, 71);
-$secondary: rgb(33, 158, 188);
+$secondary: #354a95; 
 $gray: rgb(234, 234, 234);
 $brown: rgb(232, 218, 178);
 $white: rgb(255, 255, 255);
